--- a/07Maquetacion/maquetacion.html
+++ b/07Maquetacion/maquetacion.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet">
+  <title>Document</title>
 </head>
 
 <body>
-    <header>
-     <h1> MATERIAL LOGIN SAMPLE </h1>
-     </header>
+  <header>
+    <h1> MATERIAL LOGIN SAMPLE </h1>
+  </header>
 
   <div class="container">
-      <div class="logo">
-        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-          </svg>
-      </div>
-      <div class="login">
+    <div class="logo">
+      <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-person-circle"
+        viewBox="0 0 16 16">
+        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+        <path fill-rule="evenodd"
+          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+      </svg>
+    </div>
+    <div class="login">
       <p>Enter Username</p>
-    <hr>
-    <br>
-      <p>Enter Username</p><hr>
+      <hr>
+      <br>
+      <p>Enter Username</p>
+      <hr>
     </div>
     <div class="checkbox">
-        <label><input type="checkbox" id="cbox1" value="first_checkbox"> Keep me Log In</label><br>
-     </div> 
-
-        <button class="p-button">Login</button>
-
-    
+      <label><input type="checkbox" id="cbox1" value="first_checkbox"> Keep me Log In</label><br>
+    </div>
+    <button class="p-button">Login</button>
   </div>
 </body>
+
 </html>
